--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div style="width:1000px;margin:0 auto;margin-top:30px">
+    <app-root></app-root>
+  </div>
+
 </body>
 </html>
